add realm database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".RealmApplication"
         android:theme="@style/Theme.WorldOfGames">
-        <activity android:name=".activities.DetailActivity"></activity>
+        <activity android:name=".activities.DetailActivity" />
         <activity android:name=".activities.LandingActivity" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
